# rjhg-pl

./: .gitignore  .travis.yml  LICENSE  README.md
again/: .cproject  .project
again/src/: Interpreter.h
code/: example - Copy (2).src  example3.src
description/: decription.txt
doc/: howto_install.txt  statements.ods
experiment/: hello.c
from_stick/code/: example - Copy (3).src  example - Copy.src  example.src.strip
interpreter/: .cproject  .project
interpreter/src/: CInterpreter.cpp  CInterpreter.h  Disassembler.cpp  Disassembler.h  Interpreter.cpp  Interpreter.h  again.cpp
libffi-3.2.1/: Makefile  makefile.sed~  makefiles.out~  makefiles.sed~
libffi-3.2.1/i686-pc-mingw32/: Makefile  config.status  fficonfig.h  libffi.la  libtool
libffi-3.2.1/i686-pc-mingw32/.libs/: libffi.lai
libffi-3.2.1/i686-pc-mingw32/include/: Makefile
libffi-3.2.1/i686-pc-mingw32/man/: Makefile
libffi-3.2.1/i686-pc-mingw32/src/.deps/: closures.Plo  java_raw_api.Plo  prep_cif.Plo  raw_api.Plo  types.Plo
libffi-3.2.1/i686-pc-mingw32/src/x86/: win32.lo
libffi-3.2.1/i686-pc-mingw32/src/x86/.deps/: ffi.Plo  win32.Tpo
libffi-3.2.1/i686-pc-mingw32/testsuite/: Makefile
libffi-3.2.1/x86_64-unknown-linux-gnu/: Makefile  config.status  libtool
libffi-3.2.1/x86_64-unknown-linux-gnu/include/: Makefile
libffi-3.2.1/x86_64-unknown-linux-gnu/man/: Makefile
libffi-3.2.1/x86_64-unknown-linux-gnu/testsuite/: Makefile  site.exp
libffi-3.2.1/x86_64-w64-mingw32/: Makefile  config.status  libtool
libffi-3.2.1/x86_64-w64-mingw32/.libs/: libffi.la  libffi.lai
libffi-3.2.1/x86_64-w64-mingw32/include/: Makefile
libffi-3.2.1/x86_64-w64-mingw32/man/: Makefile
libffi-3.2.1/x86_64-w64-mingw32/src/.deps/: closures.Plo  java_raw_api.Plo  prep_cif.Plo  raw_api.Plo  types.Plo
libffi-3.2.1/x86_64-w64-mingw32/src/x86/.deps/: ffi.Plo  win64.Plo
libffi-3.2.1/x86_64-w64-mingw32/testsuite/: Makefile
parser/: .cproject  .gitignore  .project
parser/src/: .gitignore  Assignment.cpp  Assignment.h  AssignmentNode.cpp  AssignmentNode.h  AstPrinter.cpp  AstPrinter.h  CFunctions.cpp  CFunctions.h  CInterpreter.cpp  CInterpreter.h  ClassDefinition.cpp  ClassDefinition.h  CodeGenerator.cpp  CodeGenerator.h  CommaSeparated.cpp  CommaSeparated.h  CompositeMethodCall.cpp  CompositeMethodCall.h  DebugInfo.cpp  DebugInfo.h  Disassembler.cpp  Disassembler.h  Expression.cpp  Expression.h  ExpressionList.h  ExpressionNode.cpp  ExpressionNode.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionThing.cpp  ExpressionThing.h  HeapManager.cpp  HeapManager.h  If.cpp  If.h  IfNode.cpp  IfNode.h  LitBool.cpp  LitBool.h  (+60 more)
parser/src/example/: example.y
parser/src/yacc/: .gitignore  Assignment.cpp  Assignment.h  CommaSeparated.cpp  CommaSeparated.h  CompositeMethodCall.cpp  CompositeMethodCall.h  Expression.cpp  Expression.h  ExpressionList.cpp  ExpressionList.h  If.h  LitBool.cpp  LitBool.h  LitFloat.cpp  LitFloat.h  LitInt.cpp  LitInt.h  LitString.cpp  LitString.h  Literal.cpp  Literal.h  Makefile  Makefile.bison  ProcedureCall.cpp  ProcedureCall.h  Return.h  SingleMethodCall.cpp  SingleMethodCall.h  Statement.cpp  Statement.h  Statements.cpp  Statements.h  Val2Expression.cpp  Val2Expression.h  VariableValue.cpp  VariableValue.h  While.h  classes.cpp  classes.h  (+13 more)
rjhg_pl/: howto_install.txt
shunting4/: .cproject  .project  shunting4.cpp
src/: .cproject  .gitignore  .gitigore  Assignment.cpp  Assignment.h  AssignmentNode.cpp  AssignmentNode.h  CConstants.h  CFunctions.c  CFunctions.cpp  CFunctions.h  CInterpreter.c  CInterpreter.cpp  CInterpreter.h  CMakeLists.txt  ClassDefinition.cpp  ClassDefinition.h  CodeGenerator.cpp  CodeGenerator.h  CommaSeparated.cpp  Comments.cpp  Comments.h  CompositeMethodCall.cpp  CompositeMethodCall.h  DebugInfo.cpp  DebugInfo.h  Disassembler.cpp  Disassembler.h  Expression.cpp  Expression.h  ExpressionList.cpp  ExpressionList.h  ExpressionNode.cpp  ExpressionNode.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionThing.cpp  ExpressionThing.h  Extern.cpp  Extern.h  (+107 more)
src/doc/: modes.txt  parser.txt
src/system/: hashtable.src  hashtable.src.strip  hashtable_resize.src  helement.src
src/test/: .gitignore  example001.src  example002.src  example003.src  example004.src  example004.tst  example005.src  example006.src  example007.src  example008.src  example009.src  example010.src  example011.src  example012.src  example012.tst  example013.src  example013.tst  example014.src  example015.src  example016.src  example016.tst  example017.src  example017.tst  example018.src  example018.tst  example019.src  example020.src  example021.src  example022.src  example023.src  example024.src  example025.src  example026.src  example026.tst  example027.src  example027.tst  example028.src  example029.src  example029.tst  list.txt
tcc/: createlib.sh  libtcc.exp  libtcc.lib
tcc-0.9.27/: config.h  config.mak  libtcc.def  tcc-doc.info  tcc.1
tcc/examples/: howto.sh  static.sh
tinygc/: makeit.sh
todo/: todo.txt
xdr-tests-1.0/: .cvsignore  MANIFEST  Makefile  test.c  test.h  test.x  test1.c  test2.c
xdr-tests-1.0/include/: rpc  sys
